--- a/Copia de Avance#2/Styles/styles.css
+++ b/Copia de Avance#2/Styles/styles.css
@@ -28,27 +28,65 @@
     font-weight: bold;
   }
   
-  /* Menú de navegación */
-  nav ul.menu {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    font-size: 20px;
-  }
-  
-  nav ul.menu li a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    padding: 6px 10px;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-  }
-  
-  nav ul.menu li a:hover {
-    background-color: #e67e22;
-  }
+  /* Menú principal */
+nav ul.menu {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  font-size: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul.menu li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  padding: 6px 10px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  display: block;
+}
+
+nav ul.menu li a:hover {
+  background-color: #e67e22;
+}
+
+/* Submenu */
+.submenu-container {
+  position: relative;
+}
+
+.submenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #2c3e50;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  border-radius: 4px;
+  min-width: 180px;
+  z-index: 1000;
+}
+
+.submenu li a {
+  padding: 10px;
+  color: white;
+  font-size: 18px;
+}
+
+.submenu li a:hover {
+  background-color: #e67e22;
+}
+
+
+.submenu-container:hover .submenu {
+  display: block;
+}
+
   
   /* Hero */
   .hero {
@@ -147,7 +185,38 @@
     padding: 20px 15px;
     font-size: 14px;
   }
-  
+  .login-container {
+  display: flex;
+  height: 100vh;
+}
+
+.image-side {
+  width: 40%;
+}
+
+.image-side img {
+  width: 100%;
+    height: 90%; 
+}
+
+.form-side {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+}
+
+.login-box {
+  width: 80%;
+  max-width: 400px;
+}
+
+
+#error {
+  display: none;
+}
+
   /* Responsive para móviles */
   @media (max-width: 600px) {
    
